# coding-task

./: .gitignore  CMakeLists.txt
include/: mylib.h
src/: main.c  mylib.c
